@@ -1,3 +1,8 @@
+Fri Nov 22 09:42:35 2013  Zachary Scott  <e@zzak.io>
+
+	* test/digest/test_digest.rb: Reverse order of assert_equal
+	  Reported by @splattael
+
 Fri Nov 22 09:03:16 2013  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* gc.c: fix build failure on FreeBSD introduced by r43763.
